gitops/system/base/cloudnative-pg/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudnative-pg
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  ingress:
    # K8s API server calls admission webhooks (container port, not service port)
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # K8s API server (manages CNPG clusters)
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # barman-cloud plugin (backup orchestration)
    - toEndpoints:
        - matchLabels:
            app: barman-cloud
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    # CNPG instance status checks (cross-namespace)
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: barman-cloud
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      app: barman-cloud
  ingress:
    # CNPG pods call the barman-cloud plugin
    - fromEndpoints:
        - matchLabels: {}
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # K8s API server
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # S3 backups (Scaleway Object Storage)
    - toCIDRSet:
        - cidr: "0.0.0.0/0"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
